# TTTTV-Flutter

./: .gitignore  FLUTTER_RUST_MIGRATION_TODO.md  FLUTTER_WINDOWS_SCOPE.md  HANDOFF_UI_REWRITE.md  LICENSE  LIVE_DART_REFACTOR_TODO.md  LIVE_MIGRATION_PLAN.md  MIGRATION_STATUS.md  PHASE9_DOUYIN_PROVIDER_RESEARCH.md  README.md  VOD_HTTP_CONTRACT.md  bootstrap_flutter_windows.ps1  build_all.ps1  build_android_apk.ps1  build_windows_flutter_release.ps1  build_windows_installer.ps1  pz.json
.claude/: settings.local.json
Moovie/: Cargo.toml  README.md
Moovie/.cargo/: config.toml
Moovie/config/: sources.json
Moovie/src/: lib.rs  main.rs  proxy.rs
Moovie/src/api/: douban.rs  favorites.rs  health.rs  history.rs  live.rs  live_auth.rs  live_favorites.rs  live_history.rs  media_proxy.rs  mod.rs  play.rs  search.rs  sources.rs
Moovie/src/core/: app_state.rs  config.rs  mod.rs  source_config.rs  storage.rs
Moovie/src/live/: mod.rs  models.rs
Moovie/src/live/danmaku/: bilibili.rs  douyin.rs  douyu.rs  huya.rs
Moovie/src/live/providers/: bilibili.rs  douyin.rs  douyin_abogus.js  douyin_abogus_native.rs  douyu.rs  huya.rs  mod.rs
Moovie/src/models/: history.rs  mod.rs  site.rs  vod_item.rs
Moovie/src/services/: mod.rs  play_parser.rs  search_service.rs  source_crawler.rs
Moovie/src/utils/: error.rs  mod.rs  response.rs
ttttv_flutter/: README.md  pubspec.yaml
ttttv_flutter/android/app/: build.gradle.kts
ttttv_flutter/lib/: main.dart
ttttv_flutter/lib/app/: app.dart  (+1 more)
ttttv_flutter/test/: widget_test.dart
ttttv_flutter/windows/: CMakeLists.txt
(+89 files in other folders)
