[package]
name = "moovie"
version = "1.0.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "native-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
lru-cache = "0.1"
url = "2"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
tower-http = { version = "0.5", features = ["cors"] }
urlencoding = "2"
rand = "0.8"
directories = "6.0.0"
brotli = "6"
flate2 = "1"
md-5 = "0.10"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
regex = "1"
qrcode = "0.14"
rquickjs = "0.11.0"
base64 = "0.22"
jcers = "0.1.2"
bytes = "1"
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"
